# docs/swagger.json
@@ -9,6 +9,81 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/admin/bill": {
+            "get": {
+                "description": "Get all billboards from data base",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin/billboard"
+                ],
+                "summary": "GetAll",
+                "operationId": "get-billboards",
+                "responses": {}
+            },
+            "post": {
+                "description": "Create the billboard and add it to data base",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin/billboard"
+                ],
+                "summary": "Create",
+                "operationId": "create-billboard",
+                "parameters": [
+                    {
+                        "description": " height / width / display_type / location_id / price",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Product"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/admin/bill/{id}": {
+            "get": {
+                "description": "Get the billboard from data base",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin/billboard"
+                ],
+                "summary": "GetById",
+                "operationId": "get-billboard",
+                "responses": {}
+            },
+            "put": {
+                "description": "Update",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin/billboard"
+                ],
+                "summary": "UpdateById",
+                "operationId": "update-billboard",
+                "responses": {}
+            }
+        },
         "/auth/sign-in": {
             "post": {
                 "description": "login to account",
@@ -82,6 +157,29 @@
                 }
             }
         },
+        "models.Product": {
+            "type": "object",
+            "properties": {
+                "display_type": {
+                    "type": "integer"
+                },
+                "height": {
+                    "type": "integer"
+                },
+                "locationId": {
+                    "type": "integer"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "productId": {
+                    "type": "integer"
+                },
+                "width": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "required": [
@@ -111,6 +209,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "headers"
         }
     }
 }
