# pkg/handler/appAuth.go
@@ -9,14 +9,14 @@ import (
 	"github.com/rs/zerolog/log"
 )
 
-// @Summary Sign In
-// @Tags auth
-// @Description login to account
-// @ID login-account
-// @Accept json
-// @Produce json
-// @Param input body dtos.SignInRequest true "username / password"
-// @Router /auth/sign-in [post]
+//	@Summary		Sign In
+//	@Tags			auth
+//	@Description	login to account
+//	@ID				login-account
+//	@Accept			json
+//	@Produce		json
+//	@Param			input	body	dtos.SignInRequest	true	"username / password"
+//	@Router			/auth/sign-in [post]
 func (h *Handler) signIn(c *gin.Context) {
 	var request dtos.SignInRequest
 	if err := c.BindJSON(&request); err != nil {
@@ -41,14 +41,14 @@ func (h *Handler) signIn(c *gin.Context) {
 	log.Info().Msg("TOKEN GENERATION ENDED")
 }
 
-// @Summary Sign Up
-// @Tags auth
-// @Description register to site
-// @ID create-account
-// @Accept json
-// @Produce json
-// @Param input body models.User true "username / email / password / name / surname"
-// @Router /auth/sign-up [post]
+//	@Summary		Sign Up
+//	@Tags			auth
+//	@Description	register to site
+//	@ID				create-account
+//	@Accept			json
+//	@Produce		json
+//	@Param			input	body	models.User	true	"username / email / password / name / surname"
+//	@Router			/auth/sign-up [post]
 func (h *Handler) signUp(c *gin.Context) {
 	var request models.User
 	if err := c.BindJSON(&request); err != nil {
