# pkg/handler/crudBillboard.go
@@ -11,14 +11,14 @@ import (
 	"github.com/rs/zerolog/log"
 )
 
-// @Summary Create
-// @Tags admin/billboard
-// @Description Create the billboard and add it to data base
-// @ID create-billboard
-// @Accept json
-// @Produce json
-// @Param input body models.Product true " height / width / display_type / location_id / price"
-// @Router /admin/bill [post]
+//	@Summary		Create
+//	@Tags			admin/billboard
+//	@Description	Create the billboard and add it to data base
+//	@ID				create-billboard
+//	@Accept			json
+//	@Produce		json
+//	@Param			input	body	models.Product	true	" height / width / display_type / location_id / price"
+//	@Router			/admin/bill [post]
 func (h *Handler) createBillboard(c *gin.Context) {
 
 	_, _, err := h.getIds(adminCtx, c)
@@ -36,7 +36,7 @@ func (h *Handler) createBillboard(c *gin.Context) {
 		return
 	}
 
-	log.Info().Msg(fmt.Sprintf("STARTED HANDLING CREATE BILLBOARD REQUEST"))
+	log.Info().Msg("STARTED HANDLING CREATE BILLBOARD REQUEST")
 	id, err := h.service.CreateBillboard(input)
 	if err != nil {
 		newErrorResponse(c, http.StatusInternalServerError, err.Error())
@@ -48,17 +48,17 @@ func (h *Handler) createBillboard(c *gin.Context) {
 		"id":        id,
 	})
 
-	log.Info().Msg(fmt.Sprintf("CREATE BILLBOARD REQUEST ENDED"))
+	log.Info().Msg("CREATE BILLBOARD REQUEST ENDED")
 
 }
 
-// @Summary GetAll
-// @Tags admin/billboard
-// @Description Get all billboards from data base
-// @ID get-billboards
-// @Accept json
-// @Produce json
-// @Router /admin/bill [get]
+//	@Summary		GetAll
+//	@Tags			admin/billboard
+//	@Description	Get all billboards from data base
+//	@ID				get-billboards
+//	@Accept			json
+//	@Produce		json
+//	@Router			/admin/bill [get]
 func (h *Handler) getAllBillboards(c *gin.Context) {
 	_, _, err := h.getIds(adminCtx, c)
 	if err != nil {
@@ -83,13 +83,13 @@ func (h *Handler) getAllBillboards(c *gin.Context) {
 
 }
 
-// @Summary GetById
-// @Tags admin/billboard
-// @Description Get the billboard from data base
-// @ID get-billboard
-// @Accept json
-// @Produce json
-// @Router /admin/bill/{id} [get]
+//	@Summary		GetById
+//	@Tags			admin/billboard
+//	@Description	Get the billboard from data base
+//	@ID				get-billboard
+//	@Accept			json
+//	@Produce		json
+//	@Router			/admin/bill/{id} [get]
 func (h *Handler) getBillboardById(c *gin.Context) {
 	_, _, err := h.getIds(adminCtx, c)
 	if err != nil {
@@ -124,13 +124,13 @@ func (h *Handler) getBillboardById(c *gin.Context) {
 
 }
 
-// @Summary UpdateById
-// @Tags admin/billboard
-// @Description Update
-// @ID update-billboard
-// @Accept json
-// @Produce json
-// @Router /admin/bill/{id} [update]
+//	@Summary		UpdateById
+//	@Tags			admin/billboard
+//	@Description	Update
+//	@ID				update-billboard
+//	@Accept			json
+//	@Produce		json
+//	@Router			/admin/bill/{id} [put]
 func (h *Handler) updateBillboard(c *gin.Context) {
 	_, _, err := h.getIds(adminCtx, c)
 	if err != nil {
